feat(nonce): #678 updated the path logic in preauth code flow
Signed-off-by: jaswanthkumartw <jaswanthkumar.p@thoughtworks.com>